--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-Package        Version
--------------- ------- 
-moviepy        1.0.3  
-pyperclip      1.8.2  
-pytube         11.0.0  
+moviepy==1.0.3  
+pyperclip==1.8.2  
+pytube==11.0.0
